[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/MatchTrial.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fundo-dia.png" type="Texture" id=2]
[ext_resource path="res://resources/assets/pedra-solta.png" type="Texture" id=3]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/assets/botao-procurar-jogo-criar.png" type="Texture" id=5]
[ext_resource path="res://resources/assets/ok-cancela.png" type="Texture" id=6]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/MatchTop.gd" type="Script" id=8]
[ext_resource path="res://resources/assets/menu-geral.png" type="Texture" id=9]
[ext_resource path="res://resources/assets/botao-pausa.png" type="Texture" id=10]
[ext_resource path="res://resources/assets/botao-pausa-ativo.png" type="Texture" id=11]
[ext_resource path="res://resources/instances/PopupQuit.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/instances/EndGame.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo-dia" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="pedra-solta" type="Sprite" parent="BG"]
position = Vector2( 291.17, 586.54 )
scale = Vector2( 0.90712, 0.828483 )
texture = ExtResource( 3 )

[node name="Trial" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 355.0
margin_right = -58.0
margin_bottom = -123.0

[node name="Warning" type="Label" parent="Trial"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.0
margin_top = -13.0
margin_right = 194.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Santiago está em julgamento!"
align = 1
valign = 1
autowrap = true

[node name="Defense" type="Control" parent="Trial"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Others" type="Label" parent="Trial/Defense"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 100.0
margin_right = 225.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Aguarde a defesa"
align = 1
valign = 1
autowrap = true

[node name="Player" type="Label" parent="Trial/Defense"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 100.0
margin_right = 225.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Faça sua defesa"
align = 1
valign = 1
autowrap = true

[node name="Voting" type="Control" parent="Trial"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Others" type="Control" parent="Trial/Voting"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 101.0
margin_right = 225.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Faça sua decisão:"
align = 1
valign = 1
autowrap = true

[node name="GuiltyBtn" type="TextureButton" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = 185.0
margin_right = 207.0
margin_bottom = 279.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="Label2" type="Label" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -179.0
margin_top = 195.0
margin_right = 196.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Culpado"
align = 1
valign = 1

[node name="InnocentBtn" type="TextureButton" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = 295.0
margin_right = 207.0
margin_bottom = 389.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="Label3" type="Label" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -179.0
margin_top = 307.0
margin_right = 196.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Inocente"
align = 1
valign = 1

[node name="AbstainBtn" type="TextureButton" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = 403.0
margin_right = 207.0
margin_bottom = 497.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="Label4" type="Label" parent="Trial/Voting/Others"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -179.0
margin_top = 415.0
margin_right = 196.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Abster"
align = 1
valign = 1

[node name="Player" type="Control" parent="Trial/Voting"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Trial/Voting/Player"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.0
margin_top = 101.0
margin_right = 446.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Aguarde a decisão"
align = 1
valign = 1
autowrap = true

[node name="Result" type="Control" parent="Trial"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Trial/Result"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 101.0
margin_right = 225.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "A decisão foi:"
align = 1
valign = 1
autowrap = true

[node name="LabelResult" type="Label" parent="Trial/Result"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -204.0
margin_top = 175.0
margin_right = 216.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
align = 1
valign = 1
autowrap = true

[node name="Top" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 231.0
script = ExtResource( 8 )

[node name="BG" type="Control" parent="Top"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Top/BG"]
texture = ExtResource( 9 )
centered = false

[node name="TimeDay" type="Control" parent="Top"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Control" parent="Top/TimeDay"]
margin_left = 25.0
margin_top = 26.0
margin_right = 105.0
margin_bottom = 105.0

[node name="ColorRect" type="ColorRect" parent="Top/TimeDay/Timer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="Top/TimeDay/Timer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -30.5
margin_right = 33.0
margin_bottom = 38.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.145098, 0.137255, 0.117647, 1 )
text = "30"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Top/TimeDay/Timer"]

[node name="Day" type="Control" parent="Top/TimeDay"]
editor/display_folded = true
margin_left = 142.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 117.0

[node name="ColorRect" type="ColorRect" parent="Top/TimeDay/Day"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="Top/TimeDay/Day"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -14.5
margin_right = 20.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Dia 1"
align = 1
valign = 1

[node name="CurrentPhase" type="Label" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -324.0
margin_top = 29.0
margin_right = -98.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Descubra sua classe"
align = 2
valign = 1

[node name="NextPhase" type="Label" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -331.0
margin_top = 61.0
margin_right = -98.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Noite"
align = 2
valign = 1

[node name="PauseBtn" type="TextureButton" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_top = 18.0
margin_right = -5.0
margin_bottom = 105.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="NameLabel" type="Label" parent="Top"]
margin_left = 6.0
margin_top = 135.0
margin_right = 195.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "Nome"
align = 1
valign = 1

[node name="PopupQuit" parent="." instance=ExtResource( 12 )]
visible = false

[node name="EndGame" parent="." instance=ExtResource( 13 )]
visible = false
[connection signal="pressed" from="Trial/Voting/Others/GuiltyBtn" to="." method="_on_GuiltyBtn_pressed"]
[connection signal="pressed" from="Trial/Voting/Others/InnocentBtn" to="." method="_on_InnocentBtn_pressed"]
[connection signal="pressed" from="Trial/Voting/Others/AbstainBtn" to="." method="_on_AbstainBtn_pressed"]
[connection signal="timeout" from="Top/TimeDay/Timer/Timer" to="Top" method="_on_Timer_timeout"]
[connection signal="pressed" from="Top/PauseBtn" to="Top" method="_on_PauseBtn_pressed"]
